k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: cloud66/k8s_secure_endpoint_app
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: cloud66/k8s_secure_endpoint_app
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 4000
