k8s/ingress_02.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
  labels:
    app: app
spec:
  rules:
  - host: app.acme.org
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 3000
  tls:
  - secretName: app-acme-org-tls
    hosts:
    - app.acme.org
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
  labels:
    app: api
spec:
  rules:
  - host: api.acme.org
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 4000
  tls:
  - secretName: api-acme-org-tls
    hosts:
    - api.acme.org
